修改了3个错误，改进接口数据
